Fixed x1 left nav on small browsers

--- a/src/less/navigation.less
+++ b/src/less/navigation.less
@@ -107,7 +107,7 @@
     /*
      * Shrink the nav bar when the page width is small */
     @media (max-width: @screen-sm) {
-        width: 56px;
+        width: 56px !important;
         li {
             overflow: hidden;
             white-space: nowrap;
