--- a/src/less/structure.less
+++ b/src/less/structure.less
@@ -116,7 +116,7 @@ main {
         .with-left & {
             margin-left: 12.5em;
             @media (max-width: @screen-sm) {
-                margin-left: 56px;
+                margin-left: 56px !important;
             }
         }
         .with-left.x1 & {
@@ -367,7 +367,7 @@ section {
         }
 
         @media (max-width: @screen-sm) {
-            left: 56px;
+            left: 56px !important;
         }
     }
 }
